# concu

./: .gitignore
async/: .env  Cargo.toml
async/src/: main.rs  parcial.rs  request_asyncs.rs  sec_request.rs
finales/: Cargo.toml
finales/src/: actores_combustible.rs  aerolineas_actores.rs  eleccion_del_lider_anillo.rs  file_readers_actors.rs  producer_consumer_channels.rs  productor_consumidor_actores.rs  productor_consumidor_monitor.rs  productor_consumidor_semaforo.rs  read_file_fork_join.rs  server_clinet_async.rs  votacion_actores.rs
fork-join/: Cargo.toml
fork-join/src/: cantidad_letras_por_linea.rs  cantidad_lineas.rs  cantidad_lineas_por_archivo_sin_rayon.rs  main.rs
fork-join/src/data/: example1.txt  example2.txt  example3.txt  example4.txt  example5.txt
locks/: Cargo.toml
locks/src/: main.rs
sync/barreras/: Cargo.toml
sync/barreras/src/: banquero_barreras.rs
sync/convars/: Cargo.toml
sync/convars/src/: producer_consumer.rs  read_write.rs  read_write_writers_privilage.rs  semaforo_con_convars.rs
sync/semaforos/: Cargo.toml
sync/semaforos/src/: barbero.rs  contador.rs  filosofos.rs  fumadores_semaforos.rs  marble_games.rs  productor_consumidor.rs
