[package]
name = "ejercicios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "request_asyncs"
path = "src/request_asyncs.rs"

[[bin]]
name = "parcial"
path = "src/parcial.rs"


[[bin]]
name = "sec_request"
path = "src/sec_request.rs"

[dependencies]
tokio = { version = "1.15", features = ["full"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
rand = "0.7"
